--- a/Midterm/contact.html
+++ b/Midterm/contact.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Contact Us - Bahamas</title>
+	<title>Contact Me - Bahamas</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,13 +14,13 @@
 				<li><a href="activities.html">Things To Do</a></li>
 				<li><a href="dining.html">Where to Eat</a></li>
 				<li><a href="statement.html">Design Statement</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
 	</header>
 
 	<main>
-		<h1>Contact Us</h1>
+		<h1>Contact Me About The Bahamas</h1>
 		
 		<section class="contact-form">
 			<form>
@@ -33,7 +33,7 @@
 				<label for="email">Email Address:</label>
 				<input type="email" id="email" name="email" required>
 				
-				<label for="comments">Questions or Comments:</label>
+				<label for="comments">Questions or Comments About My Bahamas Trip:</label>
 				<textarea id="comments" name="comments" rows="5"></textarea>
 				
 				<button type="submit" class="submit-btn">Submit</button>
@@ -43,9 +43,9 @@
 
 	<footer>
 		<div class="footer-content">
-			<p>&copy; 2023 Bahamas Tourism</p>
-			<p>Contact: info@bahamastourism.com | 1-800-BAHAMAS</p>
-			<p>Nassau, Bahamas</p>
+			<p>&copy; 2023 Hain Song's Dream Vacation Project</p>
+			<p>Contact: hrs240000@utdallas.edu</p>
+			<p>Internet Studio Midterm Project</p>
 		</div>
 	</footer>
 </body>
