--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Bahamas Paradise - Home</title>
+	<title>My Dream Vacation: Bahamas</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,30 +14,30 @@
 				<li><a href="activities.html">Things To Do</a></li>
 				<li><a href="dining.html">Where to Eat</a></li>
 				<li><a href="statement.html">Design Statement</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
 	</header>
 
 	<main>
 		<section class="hero">
-			<h1>Welcome to the Bahamas</h1>
-			<p>Crystal clear waters and pristine beaches await you</p>
+			<h1>My Dream Vacation: The Bahamas</h1>
+			<p>A place I would love to visit for crystal clear waters and pristine beaches</p>
 			<div class="cta-buttons">
 				<button class="cta">Book Now</button>
-				<button class="cta">Contact Us</button>
+				<button class="cta">Contact Me</button>
 				<button class="cta">Request Info</button>
 			</div>
 		</section>
 
 		<section class="intro">
-			<h2>Experience Paradise</h2>
-			<p>The Bahamas is an archipelago of 700 islands and cays located in the Atlantic Ocean. With its stunning turquoise waters, white sandy beaches, and vibrant culture, it's the perfect destination for your dream vacation.</p>
+			<h2>Why I Want to Experience Paradise</h2>
+			<p>The Bahamas is an archipelago of 700 islands and cays that I've always dreamed of visiting. With its stunning turquoise waters, white sandy beaches, and vibrant culture, it's my ideal destination for a dream vacation. I've been fascinated by the beautiful photos and stories from travelers who've experienced this tropical paradise.</p>
 			
 			<div class="highlights">
 				<div class="factoid">
 					<h3>700 Islands</h3>
-					<p>Explore hundreds of unique islands and cays</p>
+					<p>I'd love to explore hundreds of unique islands and cays</p>
 				</div>
 				<div class="factoid">
 					<h3>Year-Round Sunshine</h3>
@@ -45,7 +45,7 @@
 				</div>
 				<div class="factoid">
 					<h3>Rich Culture</h3>
-					<p>Experience Junkanoo festivals and local traditions</p>
+					<p>I want to experience Junkanoo festivals and local traditions</p>
 				</div>
 			</div>
 		</section>
@@ -53,9 +53,9 @@
 
 	<footer>
 		<div class="footer-content">
-			<p>&copy; 2023 Bahamas Tourism</p>
-			<p>Contact: info@bahamastourism.com | 1-800-BAHAMAS</p>
-			<p>Nassau, Bahamas</p>
+			<p>&copy; 2023 Hain Song's Dream Vacation Project</p>
+			<p>Contact: hrs240000@utdallas.edu</p>
+			<p>Internet Studio Midterm Project</p>
 		</div>
 	</footer>
 </body>
