--- a/Midterm/statement.html
+++ b/Midterm/statement.html
@@ -14,7 +14,7 @@
 				<li><a href="activities.html">Things To Do</a></li>
 				<li><a href="dining.html">Where to Eat</a></li>
 				<li><a href="statement.html">Design Statement</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -23,13 +23,13 @@
 		<h1>Design Statement</h1>
 		
 		<section class="statement">
-			<h2>Visual & Interaction Design Choices</h2>
+			<h2>My Visual & Interaction Design Choices</h2>
 			
-			<p>For this Bahamas destination website, I chose a color palette inspired by the Bahamian flag and natural environment. The primary colors are aqua blue (#00A0B0), golden yellow (#FFC72C), and black (#000000), which represent the ocean, sun, and strength of the Bahamian people. These colors immediately evoke the tropical feeling of the islands while maintaining good readability and visual hierarchy. The aqua blue creates a refreshing, oceanic feel throughout the site, while the golden yellow provides warm accents that draw attention to important elements like call-to-action buttons.</p>
+			<p>For my Bahamas destination website, I chose a color palette inspired by the Bahamian flag and natural environment because these colors represent why I want to visit this beautiful location. The primary colors are aqua blue (#00A0B0), golden yellow (#FFC72C), and black (#000000), which represent the ocean, sun, and strength of the Bahamian people. These colors immediately evoke the tropical feeling of the islands that attracts me to this destination while maintaining good readability and visual hierarchy.</p>
 			
-			<p>The typography uses two complementary Google Fonts: 'Abel' for headings and navigation, and 'Abhaya Libre' for body text. Abel is a clean, modern sans-serif font with slightly condensed letterforms that works exceptionally well for display text. Its uppercase treatment in headings creates a strong, confident presence that aligns with the vibrant energy of the Bahamas. Abhaya Libre, used in its bold weight (700) for body text, provides excellent readability with its traditional serif characteristics. The contrast between the modern Abel and the elegant Abhaya Libre creates visual interest while maintaining professionalism. This pairing balances contemporary design with timeless readability.</p>
+			<p>I selected Abel as my font because I appreciate its clean, modern appearance that feels both professional and approachable. Using Abel in both regular and bold weights allows me to create clear visual hierarchy without complicating the design. The bold weight (700) works well for headings and navigation to draw attention, while the regular weight (400) provides comfortable readability for longer text sections about why I want to visit the Bahamas and what I hope to experience there.</p>
 			
-			<p>The navigation menu uses a clean, centered layout with rounded buttons that provide clear visual feedback when hovered. CTA buttons are prominently placed on the homepage using the contrasting yellow color to draw attention while maintaining the overall color scheme. Image selection focuses on high-quality, vibrant photos that showcase the beauty of the Bahamas - crystal clear waters, white sandy beaches, and cultural experiences. The layout uses ample white space to prevent visual clutter and let the images speak for themselves. Each activity and restaurant section follows a consistent pattern of image followed by descriptive text, creating a rhythm that makes the content easy to scan and digest. The overall design aims to be inviting, easy to navigate, and reflective of the relaxing yet exciting vacation experience the Bahamas offers, while the font pairing specifically enhances both the modern appeal and traditional reliability that travelers seek in a vacation destination.</p>
+			<p>The navigation menu uses a simple, centered layout that I find intuitive as a beginner web developer. I included CTA buttons on the homepage because they're required for the assignment, but I've personalized the text to reflect that this is about my dream vacation rather than a commercial tourism site. I chose vibrant, high-quality images that showcase exactly what draws me to the Bahamas - the crystal clear waters, unique experiences like swimming with pigs, and the beautiful beach landscapes. The overall design reflects my personal excitement about visiting this destination while meeting all the assignment requirements.</p>
 		</section>
 
 		<section class="citations">
@@ -38,17 +38,16 @@
 				<li>Bahamas information: <a href="https://www.bahamas.com/">Official Bahamas Tourism Site</a></li>
 				<li>All images from: <a href="https://unsplash.com/">Unsplash</a></li>
 				<li>Fonts from: <a href="https://fonts.google.com/">Google Fonts</a></li>
-				<li>Abel font: <a href="https://gwfh.mrancart.com/ajax/apis/fonts#abel">Google Web Fonts Helper - Abel</a></li>
-				<li>Abhaya Libre font: <a href="https://gwfh.mrancart.com/ajax/apis/fonts#abhaya-libre">Google Web Fonts Helper - Abhaya Libre</a></li>
+				<li>Abel font: <a href="https://gwfh.mranftl.com/fonts/abel?subsets=latin">Google Web Fonts Helper - Abel</a></li>
 			</ul>
 		</section>
 	</main>
 
 	<footer>
 		<div class="footer-content">
-			<p>&copy; 2023 Bahamas Tourism</p>
-			<p>Contact: info@bahamastourism.com | 1-800-BAHAMAS</p>
-			<p>Nassau, Bahamas</p>
+			<p>&copy; 2023 Hain Song's Dream Vacation Project</p>
+			<p>Contact: hrs240000@utdallas.edu</p>
+			<p>Internet Studio Midterm Project</p>
 		</div>
 	</footer>
 </body>
