--- a/Midterm/activities.html
+++ b/Midterm/activities.html
@@ -14,19 +14,19 @@
 				<li><a href="activities.html">Things To Do</a></li>
 				<li><a href="dining.html">Where to Eat</a></li>
 				<li><a href="statement.html">Design Statement</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
 	</header>
 
 	<main>
-		<h1>Amazing Activities in the Bahamas</h1>
+		<h1>Activities I Want to Experience in the Bahamas</h1>
 		
 		<section class="activity">
 			<img src="https://images.unsplash.com/photo-1544551763-46a013bb70d5?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Snorkeling in clear blue water">
 			<div class="activity-text">
 				<h2>Snorkeling & Diving</h2>
-				<p>Discover the incredible underwater world of the Bahamas. Swim with tropical fish, explore coral reefs, and even encounter friendly dolphins. The clear waters provide perfect visibility for an unforgettable aquatic adventure.</p>
+				<p>I would love to discover the incredible underwater world of the Bahamas. Swimming with tropical fish, exploring coral reefs, and even encountering friendly dolphins sounds amazing. The clear waters provide perfect visibility for what would be an unforgettable aquatic adventure.</p>
 			</div>
 		</section>
 
@@ -34,7 +34,7 @@
 			<img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Pig swimming in ocean">
 			<div class="activity-text">
 				<h2>Swim with Pigs</h2>
-				<p>Visit the famous swimming pigs of Exuma! These friendly pigs live on Big Major Cay and love swimming in the crystal-clear waters. It's a unique experience you won't find anywhere else in the world.</p>
+				<p>I'm really excited about visiting the famous swimming pigs of Exuma! These friendly pigs live on Big Major Cay and love swimming in the crystal-clear waters. It's a unique experience I won't find anywhere else in the world and something I've always wanted to see.</p>
 			</div>
 		</section>
 
@@ -42,16 +42,16 @@
 			<img src="https://images.unsplash.com/photo-1512100356356-de1b84283e18?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Boat tour in Bahamas">
 			<div class="activity-text">
 				<h2>Island Hopping Tours</h2>
-				<p>Take a boat tour and explore multiple islands in one day. Visit secluded beaches, enjoy fresh seafood lunches, and experience the diverse landscapes that make each Bahamian island unique.</p>
+				<p>Taking a boat tour to explore multiple islands in one day sounds like the perfect way to experience the Bahamas. I'd love to visit secluded beaches, enjoy fresh seafood lunches, and experience the diverse landscapes that make each Bahamian island unique.</p>
 			</div>
 		</section>
 	</main>
 
 	<footer>
 		<div class="footer-content">
-			<p>&copy; 2023 Bahamas Tourism</p>
-			<p>Contact: info@bahamastourism.com | 1-800-BAHAMAS</p>
-			<p>Nassau, Bahamas</p>
+			<p>&copy; 2023 Hain Song's Dream Vacation Project</p>
+			<p>Contact: hrs240000@utdallas.edu</p>
+			<p>Internet Studio Midterm Project</p>
 		</div>
 	</footer>
 </body>
