--- a/Midterm/dining.html
+++ b/Midterm/dining.html
@@ -14,19 +14,19 @@
 				<li><a href="activities.html">Things To Do</a></li>
 				<li><a href="dining.html">Where to Eat</a></li>
 				<li><a href="statement.html">Design Statement</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
 	</header>
 
 	<main>
-		<h1>Delicious Dining in the Bahamas</h1>
+		<h1>Restaurants I'd Love to Try in the Bahamas</h1>
 		
 		<section class="restaurant">
 			<img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Restaurant with ocean view">
 			<div class="restaurant-text">
 				<h2>Ocean Breeze Grill</h2>
-				<p>Enjoy fresh seafood with spectacular ocean views. Our signature dish is the grilled lobster with garlic butter, served with traditional peas and rice. The perfect spot for a romantic dinner as you watch the sunset.</p>
+				<p>I'd enjoy fresh seafood with spectacular ocean views. Their signature dish is the grilled lobster with garlic butter, served with traditional peas and rice. This seems like the perfect spot for a romantic dinner while watching the sunset over the water.</p>
 			</div>
 		</section>
 
@@ -34,7 +34,7 @@
 			<img src="https://images.unsplash.com/photo-1559339352-11d035aa65de?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Local Bahamian restaurant">
 			<div class="restaurant-text">
 				<h2>Conch Shell Café</h2>
-				<p>Experience authentic Bahamian cuisine at its best. Try our famous cracked conch, conch fritters, and conch salad. Located in the heart of Nassau, this family-owned restaurant has been serving locals and tourists for over 30 years.</p>
+				<p>I want to experience authentic Bahamian cuisine at its best. I'd try their famous cracked conch, conch fritters, and conch salad. Located in the heart of Nassau, this family-owned restaurant has been serving locals and tourists for over 30 years, which sounds like a genuine cultural experience.</p>
 			</div>
 		</section>
 
@@ -42,16 +42,16 @@
 			<img src="https://images.unsplash.com/photo-1424847651672-bf20a4b0982b?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Beachside bar and grill">
 			<div class="restaurant-text">
 				<h2>Palm Beach Bar & Grill</h2>
-				<p>Casual dining right on the sand. Enjoy burgers, sandwiches, and tropical drinks with your toes in the water. Live music on weekends and the best piña coladas on the island make this a must-visit spot.</p>
+				<p>Casual dining right on the sand sounds perfect for a relaxed day. I'd enjoy burgers, sandwiches, and tropical drinks with my toes in the water. Live music on weekends and what are supposedly the best piña coladas on the island make this a must-visit spot for me.</p>
 			</div>
 		</section>
 	</main>
 
 	<footer>
 		<div class="footer-content">
-			<p>&copy; 2023 Bahamas Tourism</p>
-			<p>Contact: info@bahamastourism.com | 1-800-BAHAMAS</p>
-			<p>Nassau, Bahamas</p>
+			<p>&copy; 2023 Hain Song's Dream Vacation Project</p>
+			<p>Contact: hrs240000@utdallas.edu</p>
+			<p>Internet Studio Midterm Project</p>
 		</div>
 	</footer>
 </body>
