--- a/Midterm/statement.html
+++ b/Midterm/statement.html
@@ -22,6 +22,14 @@
 	<main>
 		<h1>Design Statement</h1>
 		
+		<section class="statement-hero">
+			<img src="https://images.unsplash.com/photo-1544551763-46a013bb70d5?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Bahamas design inspiration">
+			<div class="statement-intro">
+				<h2>My Design Journey to the Bahamas</h2>
+				<p>This page explains the creative decisions behind my dream vacation website design.</p>
+			</div>
+		</section>
+		
 		<section class="statement">
 			<h2>My Visual & Interaction Design Choices</h2>
 			
@@ -38,7 +46,7 @@
 				<li>Bahamas information: <a href="https://www.bahamas.com/">Official Bahamas Tourism Site</a></li>
 				<li>All images from: <a href="https://unsplash.com/">Unsplash</a></li>
 				<li>Fonts from: <a href="https://fonts.google.com/">Google Fonts</a></li>
-				<li>Abel font: <a href="https://gwfh.mranftl.com/fonts/abel?subsets=latin">Google Web Fonts Helper - Abel</a></li>
+				<li>Abel font: <a href="https://gwfh.mrancart.com/ajax/apis/fonts#abel">Google Web Fonts Helper - Abel</a></li>
 			</ul>
 		</section>
 	</main>
