--- a/Midterm/contact.html
+++ b/Midterm/contact.html
@@ -22,6 +22,14 @@
 	<main>
 		<h1>Contact Me About The Bahamas</h1>
 		
+		<section class="contact-hero">
+			<img src="https://images.unsplash.com/photo-1512100356356-de1b84283e18?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Bahamas beach with communication concept">
+			<div class="contact-intro">
+				<h2>Get in Touch About My Dream Trip</h2>
+				<p>I'd love to hear your thoughts, suggestions, or questions about my Bahamas vacation plans. Feel free to reach out using the form below!</p>
+			</div>
+		</section>
+		
 		<section class="contact-form">
 			<form>
 				<label for="name">Full Name:</label>
