--- a/Midterm/contact.html
+++ b/Midterm/contact.html
@@ -20,10 +20,12 @@
 	</header>
 
 	<main>
-		<h1>Contact Me About The Bahamas</h1>
+		<section class="page-header">
+			<h1>Contact Me About The Bahamas</h1>
+			<img src="https://images.unsplash.com/photo-1535016120720-40c646be5580?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Contact and communication concept" class="header-image">
+		</section>
 		
 		<section class="contact-hero">
-			<img src="https://images.unsplash.com/photo-1512100356356-de1b84283e18?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Bahamas beach with communication concept">
 			<div class="contact-intro">
 				<h2>Get in Touch About My Dream Trip</h2>
 				<p>I'd love to hear your thoughts, suggestions, or questions about my Bahamas vacation plans. Feel free to reach out using the form below!</p>
