--- a/Midterm/statement.html
+++ b/Midterm/statement.html
@@ -20,10 +20,12 @@
 	</header>
 
 	<main>
-		<h1>Design Statement</h1>
+		<section class="page-header">
+			<h1>Design Statement</h1>
+			<img src="https://images.unsplash.com/photo-1558655146-364adaf1fcc9?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Design and creativity concept" class="header-image">
+		</section>
 		
 		<section class="statement-hero">
-			<img src="https://images.unsplash.com/photo-1544551763-46a013bb70d5?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Bahamas design inspiration">
 			<div class="statement-intro">
 				<h2>My Design Journey to the Bahamas</h2>
 				<p>This page explains the creative decisions behind my dream vacation website design.</p>
