--- a/Midterm/activities.html
+++ b/Midterm/activities.html
@@ -31,7 +31,7 @@
 		</section>
 
 		<section class="activity">
-			<img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Pig swimming in ocean">
+			<img src="https://images.unsplash.com/photo-1533586616444-300edc8a6b5e?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1849" alt="Pig swimming in ocean">
 			<div class="activity-text">
 				<h2>Swim with Pigs</h2>
 				<p>I'm really excited about visiting the famous swimming pigs of Exuma! These friendly pigs live on Big Major Cay and love swimming in the crystal-clear waters. It's a unique experience I won't find anywhere else in the world and something I've always wanted to see.</p>
