--- a/Midterm/contact.html
+++ b/Midterm/contact.html
@@ -22,7 +22,7 @@
 	<main>
 		<section class="page-header">
 			<h1>Contact Me About The Bahamas</h1>
-			<img src="https://images.unsplash.com/photo-1535016120720-40c646be5580?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Contact and communication concept" class="header-image">
+			<img src="https://images.unsplash.com/vector-1753275310246-26c3ed9a704d?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=870" alt="Contact and communication concept" class="header-image">
 		</section>
 		
 		<section class="contact-hero">
