--- a/Midterm/statement.html
+++ b/Midterm/statement.html
@@ -22,7 +22,7 @@
 	<main>
 		<section class="page-header">
 			<h1>Design Statement</h1>
-			<img src="https://images.unsplash.com/photo-1558655146-364adaf1fcc9?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Design and creativity concept" class="header-image">
+			<img src="https://images.unsplash.com/vector-1742740738976-a005a10d0bc1?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1160" alt="Design and creativity concept" class="header-image">
 		</section>
 		
 		<section class="statement-hero">
