--- a/Midterm/dining.html
+++ b/Midterm/dining.html
@@ -39,7 +39,7 @@
 		</section>
 
 		<section class="restaurant">
-			<img src="https://images.unsplash.com/photo-1424847651672-bf20a4b0982b?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Beachside bar and grill">
+			<img src="https://images.unsplash.com/photo-1604766734578-c76b292a316d?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=774" alt="Beachside bar and grill">
 			<div class="restaurant-text">
 				<h2>Palm Beach Bar & Grill</h2>
 				<p>Casual dining right on the sand sounds perfect for a relaxed day. I'd enjoy burgers, sandwiches, and tropical drinks with my toes in the water. Live music on weekends and what are supposedly the best piña coladas on the island make this a must-visit spot for me.</p>
