--- a/Midterm/statement.html
+++ b/Midterm/statement.html
@@ -22,7 +22,7 @@
 	<main>
 		<section class="page-header">
 			<h1>Design Statement</h1>
-			<img src="https://images.unsplash.com/vector-1742740738976-a005a10d0bc1?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1160" alt="Design and creativity concept" class="header-image">
+			<img src="https://www.istockphoto.com/vector/seamless-pattern-with-tropical-palm-trees-gm2197672942-615618808?utm_source=unsplash&utm_medium=affiliate&utm_campaign=srp_photos_bottom&utm_content=https%3A%2F%2Funsplash.com%2Fs%2Fillustrations%2Fbahama-design%3Flicense%3Dfree&utm_term=bahama+design%3A%3Alayout-below-fold-units-2%3Acontrol" alt="Design and creativity concept" class="header-image">
 		</section>
 		
 		
