--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <li><a href="./asg7/index.html">Assignment 7: Campaign</a></li>
                             <li><a href="./asg7/wireframes.html">Assignment 7: Wireframes</a></li>
                             <li><a href="./asg8/domains.html">Assignment 8: Domain Names</a></li>
-                            <li><a href="./Midterm/index.html">Midterm Assignment</a></li>
+                            <li><a href="./midterm/">Midterm Assignment</a></li>
 	
                     </ul>
                 </section>
