--- a/midterm/statement.html
+++ b/midterm/statement.html
@@ -42,7 +42,7 @@
 				<li>Bahamas information: <a href="https://www.bahamas.com/">Official Bahamas Tourism Site</a></li>
 				<li>All images from: <a href="https://unsplash.com/">Unsplash</a></li>
 				<li>Fonts from: <a href="https://fonts.google.com/">Google Fonts</a></li>
-				<li>Abel font: <a href="https://gwfh.mrancart.com/ajax/apis/fonts#abel">Google Web Fonts Helper - Abel</a></li>
+				<li>Abel font: <a href="https://gwfh.mranftl.com/fonts/abel?subsets=latin">Google Web Fonts Helper - Abel</a></li>
 			</ul>
 		</section>
 	</main>
