--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                             <li><a href="./asg7/wireframes.html">Assignment 7: Wireframes</a></li>
                             <li><a href="./asg8/domains.html">Assignment 8: Domain Names</a></li>
                             <li><a href="./midterm/">Midterm Assignment</a></li>
+                            <li><a href="./asg11/">Assignment 11</a></li>
 	
                     </ul>
                 </section>
