--- a/asg12/index.html
+++ b/asg12/index.html
@@ -1,15 +1,96 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Website Template (Please update for full credit)</title>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Favorite Movies Gallery</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>My Favorite Movies Collection</h1>
+    </header>
 
-	<h1>Website Template</h1>
-	<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
-	
+    <section class="intro">
+        <p>Cinema has always been my escape into worlds of imagination, emotion, and wonder. The movies featured in this gallery represent a diverse collection of films that have shaped my understanding of storytelling. From mind-bending science fiction to heartwarming animations, each film offers something unique—whether it's stunning visuals, compelling characters, or thought-provoking themes. These movies have not only entertained me but have also inspired me to see the world from different perspectives. They remind me of the power of storytelling and the magic that happens when creative vision meets masterful execution.</p>
+    </section>
+
+    <main class="gallery">
+        <article class="movie-card">
+            <img src="https://image.tmdb.org/t/p/w300/qmDpIHrmpJINaRKAfWQfftjCdyi.jpg" alt="Inception movie poster">
+            <h2>Inception</h2>
+            <p>A mind-bending thriller about dream infiltration that challenges our perception of reality with stunning visuals and an intricate plot.</p>
+        </article>
+
+        <article class="movie-card">
+            <img src="https://image.tmdb.org/t/p/w300/39wmItIWsg5sZMyRUHLkWBcuVCM.jpg" alt="Spirited Away movie poster">
+            <h2>Spirited Away</h2>
+            <p>Studio Ghibli's masterpiece follows a young girl's magical journey in a spirit world, filled with enchanting animation and deep symbolism.</p>
+        </article>
+
+        <article class="movie-card">
+            <img src="https://image.tmdb.org/t/p/w300/3bhkrj58Vtu7enYsRolD1fZdja1.jpg" alt="The Shawshank Redemption poster">
+            <h2>The Shawshank Redemption</h2>
+            <p>A powerful tale of hope and friendship set in prison, demonstrating the resilience of the human spirit against all odds.</p>
+        </article>
+
+        <article class="movie-card">
+            <img src="https://image.tmdb.org/t/p/w300/wuMc08IPKEatf9rnMNXvIDxqP4W.jpg" alt="The Grand Budapest Hotel poster">
+            <h2>The Grand Budapest Hotel</h2>
+            <p>Wes Anderson's whimsical adventure featuring impeccable production design and a charming story about friendship and loyalty.</p>
+        </article>
+
+        <article class="movie-card">
+            <img src="https://image.tmdb.org/t/p/w300/rSPw7tgCH9c6NqICZef4kZjFOQ5.jpg" alt="Interstellar movie poster">
+            <h2>Interstellar</h2>
+            <p>An epic space odyssey exploring love, time, and human survival with breathtaking cinematography and emotional depth.</p>
+        </article>
+
+        <article class="movie-card">
+            <img src="https://image.tmdb.org/t/p/w300/yFihWxQcmqcaBR31QM6Y8gT6aYV.jpg" alt="Parasite movie poster">
+            <h2>Parasite</h2>
+            <p>A darkly comedic thriller examining class disparity through the story of two families in contemporary South Korea.</p>
+        </article>
+
+        <article class="movie-card">
+            <img src="https://image.tmdb.org/t/p/w300/npHNjldbeTHdKKw28bJKs7lzqzj.jpg" alt="Pulp Fiction movie poster">
+            <h2>Pulp Fiction</h2>
+            <p>Tarantino's groundbreaking film with interconnected stories, memorable dialogue, and an iconic nonlinear narrative structure.</p>
+        </article>
+
+        <article class="movie-card">
+            <img src="https://image.tmdb.org/t/p/w300/sM33SANp9z6rXW8Itn7NnG1GOEs.jpg" alt="The Matrix movie poster">
+            <h2>The Matrix</h2>
+            <p>A revolutionary sci-fi action film that questions reality and features groundbreaking visual effects that changed cinema forever.</p>
+        </article>
+
+        <article class="movie-card">
+            <img src="https://image.tmdb.org/t/p/w300/6oom5QYQ2yQTMJIbnvbkBL9cHo6.jpg" alt="The Lord of the Rings poster">
+            <h2>The Lord of the Rings</h2>
+            <p>An epic fantasy trilogy bringing Middle-earth to life with stunning landscapes, memorable characters, and timeless themes of courage.</p>
+        </article>
+
+        <article class="movie-card">
+            <img src="https://image.tmdb.org/t/p/w300/xbpSDU3p7YUGlu9Mr6Egg2Vweto.jpg" alt="Goodfellas movie poster">
+            <h2>Goodfellas</h2>
+            <p>Scorsese's masterful crime drama chronicling the rise and fall of mobster Henry Hill with dynamic storytelling and powerful performances.</p>
+        </article>
+
+        <article class="movie-card">
+            <img src="https://image.tmdb.org/t/p/w300/yPisjyLweCl1tbgwgtzBCNCBle.jpg" alt="Blade Runner 2049 poster">
+            <h2>Blade Runner 2049</h2>
+            <p>A visually stunning sequel exploring what it means to be human, featuring Roger Deakins' breathtaking cinematography.</p>
+        </article>
+
+        <article class="movie-card">
+            <img src="https://image.tmdb.org/t/p/w300/f89U3ADr1oiB1s9GkdPOEpXUk5H.jpg" alt="The Dark Knight poster">
+            <h2>The Dark Knight</h2>
+            <p>Christopher Nolan's groundbreaking superhero film featuring Heath Ledger's unforgettable performance as the Joker.</p>
+        </article>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Favorite Movies Gallery</p>
+    </footer>
 </body>
 </html>
