--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                             <li><a href="./asg8/domains.html">Assignment 8: Domain Names</a></li>
                             <li><a href="./midterm/">Midterm Assignment</a></li>
                             <li><a href="./asg11/">Assignment 11</a></li>
+                             <li><a href="./asg12/">Assignment 12</a></li>
 	
                     </ul>
                 </section>
