--- a/asg13/index.html
+++ b/asg13/index.html
@@ -11,7 +11,7 @@
   <!-- Add your name in the author section -->
   <meta name="author" content="Hain Song">
   <!-- Don't forget to add the stylesheet link here!! -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 </head>
