--- a/asg13/index.html
+++ b/asg13/index.html
@@ -35,7 +35,7 @@
             <!-- PepsiCo Job Card -->
             <article class="job-card">
                 <div class="logo-container">
-                    <img src="pepsico.jpg" alt="PepsiCo Logo">
+                    <img src="images/pepsico.jpg" alt="PepsiCo Logo">
                 </div>
                 <h3>Design Sr. Manager</h3>
                 <div class="job-description">
@@ -48,7 +48,7 @@
             <!-- Capital One Job Card -->
             <article class="job-card">
                 <div class="logo-container">
-                    <img src="capitalone.jpg" alt="Capital One Logo">
+                    <img src="images/capitalone.jpg" alt="Capital One Logo">
                 </div>
                 <h3>Senior Manager, Product Design</h3>
                 <div class="job-description">
@@ -61,7 +61,7 @@
             <!-- JPMorganChase Job Card -->
             <article class="job-card">
                 <div class="logo-container">
-                    <img src="jpmorganchase.jpg" alt="JPMorganChase Logo">
+                    <img src="images/jpmorganchase.jpg" alt="JPMorganChase Logo">
                 </div>
                 <h3>Experience Design Senior Associate</h3>
                 <div class="job-description">
