--- a/asg13/index.html
+++ b/asg13/index.html
@@ -73,7 +73,7 @@
         </div>
 
         <footer>
-            <p>&copy; 2024 Dream Job Search Assignment | Created for Web Design Class</p>
+            <p>&copy; 2024 Dream Job Search Assignment | Created for Internet Studio 1</p>
         </footer>
     </div>
 </body>
