--- a/asg13/index.html
+++ b/asg13/index.html
@@ -12,11 +12,9 @@
   <meta name="author" content="Hain Song">
   <!-- Don't forget to add the stylesheet link here!! -->
   <link rel="stylesheet" href="styles.css">
-
-</head>
 </head>
 
-<body>
+<<body>
     <div class="container">
         <header>
             <h1>My Dream Job Search</h1>
@@ -35,9 +33,9 @@
             <!-- PepsiCo Job Card -->
             <article class="job-card">
                 <div class="logo-container">
-                    <img src="images/pepsico.jpg" alt="PepsiCo Logo">
+                    <img src="pepsico.jpeg" alt="PepsiCo Logo">
                 </div>
-                <h3>Design Sr. Manager</h3>
+                <h3><a href="https://www.indeed.com/viewjob?jk=86c4438c18def0b5&from=shareddesktop_copy" target="_blank">Design Sr. Manager</a></h3>
                 <div class="job-description">
                     <p>
                         This PepsiCo position is incredibly appealing because it offers the perfect blend of creative design work and strategic business impact. The role emphasizes storytelling and facilitation through various mediums, from digital prototyping to immersive experience activations, which aligns perfectly with my passion for multi-faceted design approaches. I'm particularly excited about the opportunity to work on S&T core priorities and collaborate with multi-disciplinary teams including product, business, strategy, and data analytics. The compensation range of $118,700 - $198,800 plus a 15% bonus demonstrates the company's investment in this role, and the comprehensive benefits package including paid parental leave shows they value work-life balance. Most importantly, this position would allow me to lead client-facing workshops and inspire innovative design approaches while maintaining and evolving digital principles that impact the entire organization.
@@ -48,9 +46,9 @@
             <!-- Capital One Job Card -->
             <article class="job-card">
                 <div class="logo-container">
-                    <img src="images/capitalone.jpg" alt="Capital One Logo">
+                    <img src="capitalone.jpeg" alt="Capital One Logo">
                 </div>
-                <h3>Senior Manager, Product Design</h3>
+                <h3><a href="https://www.indeed.com/viewjob?jk=fa63949e8270ca4a&from=shareddesktop_copy" target="_blank">Senior Manager, Product Design</a></h3>
                 <div class="job-description">
                     <p>
                         Capital One's Senior Manager position stands out as an exceptional opportunity because it combines people leadership with cutting-edge design challenges in AI initiatives, mobile app design, and internal systems. The role requires navigating a data-heavy, highly regulated environment, which would provide invaluable experience in designing within constraints while maintaining user-centricity. What excites me most is the opportunity to manage a diverse design team while communicating directly with VP-level stakeholders and shaping product strategy across multiple domains. The company's mission to "change banking for good" and their emphasis on collaboration, authenticity, and healthy critique creates an environment where innovative ideas can flourish. With a competitive salary range of $175,500 - $200,300 and location in Plano, TX, this hybrid role offers both financial stability and flexibility while working for a founder-led company that values ingenuity and humanity in banking.
@@ -61,9 +59,9 @@
             <!-- JPMorganChase Job Card -->
             <article class="job-card">
                 <div class="logo-container">
-                    <img src="images/jpmorganchase.jpg" alt="JPMorganChase Logo">
+                    <img src="jpmorganchase.jpeg" alt="JPMorganChase Logo">
                 </div>
-                <h3>Experience Design Senior Associate</h3>
+                <h3><a href="https://www.indeed.com/viewjob?jk=ad81812b8bdb2ff3&from=shareddesktop_copy" target="_blank">Experience Design Senior Associate</a></h3>
                 <div class="job-description">
                     <p>
                         The JPMorganChase Experience Design Senior Associate role in the Chase MyHome team is particularly attractive because it focuses on the meaningful and personal domain of home lending, where good design can truly impact people's lives during major financial decisions. This position offers the perfect opportunity to develop expertise in inclusive design practices and accessibility guidelines while working across web, mobile, and branch platforms. I'm especially intrigued by the emphasis on AI-powered design for personalization, automation, and predictive features, which represents the cutting edge of UX design. The role's focus on iterative design processes and incorporating user feedback aligns perfectly with my belief in human-centered design methodologies. Working for a leading financial services firm that helps nearly half of America's households achieve their financial goals would provide both job security and the satisfaction of making a real difference. The comprehensive benefits package, including tuition reimbursement and mental health support, demonstrates the company's commitment to employee growth and wellbeing.
