--- a/asg13/index.html
+++ b/asg13/index.html
@@ -33,7 +33,7 @@
             <!-- PepsiCo Job Card -->
             <article class="job-card">
                 <div class="logo-container">
-                    <img src="pepsico.jpeg" alt="PepsiCo Logo">
+                    <img src="images/pepsico.jpeg" alt="PepsiCo Logo">
                 </div>
                 <h3><a href="https://www.indeed.com/viewjob?jk=86c4438c18def0b5&from=shareddesktop_copy" target="_blank">Design Sr. Manager</a></h3>
                 <div class="job-description">
@@ -46,7 +46,7 @@
             <!-- Capital One Job Card -->
             <article class="job-card">
                 <div class="logo-container">
-                    <img src="capitalone.jpeg" alt="Capital One Logo">
+                    <img src="images/capitalone.jpeg" alt="Capital One Logo">
                 </div>
                 <h3><a href="https://www.indeed.com/viewjob?jk=fa63949e8270ca4a&from=shareddesktop_copy" target="_blank">Senior Manager, Product Design</a></h3>
                 <div class="job-description">
@@ -59,7 +59,7 @@
             <!-- JPMorganChase Job Card -->
             <article class="job-card">
                 <div class="logo-container">
-                    <img src="jpmorganchase.jpeg" alt="JPMorganChase Logo">
+                    <img src="images/jpmorganchase.jpeg" alt="JPMorganChase Logo">
                 </div>
                 <h3><a href="https://www.indeed.com/viewjob?jk=ad81812b8bdb2ff3&from=shareddesktop_copy" target="_blank">Experience Design Senior Associate</a></h3>
                 <div class="job-description">
